Add .gitignore, package-lock.json, and implement git-filter CLI tool

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "git-filter",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "bin": {
+    "git-filter": "./src/index.js"
   },
   "keywords": [
     "git",
