--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "scripts": {
     "lint": "eslint . && prettier -c src",
     "lint:fix": "eslint . --fix && prettier -w src",
-    "release": "npx changelogen --release -i",
+    "change-author": "node scripts/changeAuthor.js",
+    "release": "npx changelogen --release -i && npm run change-author",
     "prepare": "husky"
   },
   "bin": {
